--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "frontend",
+  "name": "c-to-promela",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,18 +12,19 @@
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "ai": "^4.3.9",
-    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "eventsource-parser": "^1.0.0",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
-    "next": "15.3.1",
+    "next": "14.2.28",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "openai": "^4.96.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-resizable-panels": "^2.1.8",
+    "recoil": "^0.7.7",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
