--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "eventsource-parser": "^1.0.0",
+    "jison": "^0.4.18",
     "lucide-react": "^0.503.0",
     "monaco-editor": "^0.52.2",
     "next": "14.2.28",
